Bug 354920 - No sound on local computer over xfeerdp session
Summary: No sound on local computer over xfeerdp session
Status: RESOLVED FIXED
Alias: None
Product: krdc
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Fedora RPMs Linux
: NOR normal
Target Milestone: ---
Assignee: Urs Wolfer
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-11-05 20:50 UTC by Geert Janssens
Modified: 2025-03-05 21:28 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 23.12
Sentry Crash Report:


Attachments
Fix the rdp audio issue (2.01 KB, patch)
2016-02-04 07:06 UTC, AceLan Kao
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Geert Janssens 2015-11-05 20:50:48 UTC
I'm on Fedora 22 and have set up an rdp session to a Windows XP vm via krdc. On Fedora xfreerdp is used as rdp backend.

The connection settings in krdc allow three ways to handle the remote pc's sound: play it on the local (client) pc, play it on the remote pc or disable sound.

My goal is to play sound on the local pc. I can't make this work with any of the above options.

The krdc version on Fedora 22 is not in the default list for the krdc component on bugs.kde.org, so I'll specify it here:
krdc-15.04.0-1.fc22.x86_64

Reproducible: Always

Steps to Reproduce:
1. Use krdc to connect to a remote Windows XP machine
2. In the connection settings choose "On this computer" for the sound setting
3. Start the remote connection
4. Make some sound on the remote pc (for example by adjusting the sound volume)


Actual Results:  
No sound is heard on the local pc


Expected Results:  
The local pc properly reproduces the sound emitted on the remote pc


Krdc delegates the actual remote connection to xfreerdp. For sound it passes either of these options:
/audio-mode:0 (for sound on this computer)
/audio-mode:1 (for sound on remote computer)

When I run xfreerdp manually without this option and instead add "/sound:sys:pulse" or "/sound:sys:alsa" sound is properly reproduced on the local machine.
Comment 1 Urs Wolfer 2015-11-06 17:39:29 UTC
Can you reproduce this issue when you start xfreerdp from command line (with the correct parameters)?
Comment 2 Ryan Gillette 2015-11-15 07:30:38 UTC
I can confirm that using KRDC that I get no sound from Windows VM. When I launch from command line with "xfreerdp /u:username /p:SuperSecretPassword /v:MyCoolIP /sound:sys:pulse /w:1440 /h:900" I get sound from the VM just fine.
Comment 3 AceLan Kao 2016-02-04 07:06:26 UTC
Created attachment 97000 [details]
Fix the rdp audio issue

I've tested the patch on my qemu vm(win10), both options work for me.

krdc(7127)/krdc (RDP backend) RdpView::start: Use FreeRDP 1.1+ compatible arguments
krdc(7127)/krdc (RDP backend) RdpView::start: Starting xfreerdp with arguments:  "-decorations /w:1816 /h:1247 +smart-sizing /kbd:0x00000409 /u:acelan /parent-window:153092138 /bpp:24 /audio-mode: 0 /sound:sys:alsa /drive:media,/home/acelan /network:lan /rfx /cert-ignore +clipboard /port:3389 /v:192.168.2.118"

and

krdc(7127)/krdc (RDP backend) RdpView::start: Use FreeRDP 1.1+ compatible arguments
krdc(7127)/krdc (RDP backend) RdpView::start: Starting xfreerdp with arguments:  "-decorations /w:1800 /h:1231 +smart-sizing /kbd:0x00000409 /u:acelan /parent-window:153092217 /bpp:24 /audio-mode: 0 /sound:sys:pulse /drive:media,/home/acelan /network:lan /rfx /cert-ignore +clipboard /port:3389 /v:192.168.2.118"
Comment 4 Tom Chiverton 2016-08-22 19:23:38 UTC
Ack on 16.04 LTS.

krdc runs
#  xfreerdp -decorations /w:1024 /h:768 /kbd:0x00000809 /u:administrator 
/parent-window:25166409 /bpp:24 /audio-mode:0 /drive:media /tmp 
/network:broadband /rfx /cert-ignore +clipboard /port:3389 
/v:ispring.evcloud.co.uk /p:

But this works
# xfreerdp /u:administrator /v:ispring.evcloud.co.uk /sound:sys:pulse 
/w:1024 /h:768 /bpp:24 /drive:media /tmp /network:broadband /rfx 
/cert-ignore +clipboard
Comment 5 AceLan Kao 2016-08-23 03:15:49 UTC
Tom, 
Are you saying that the krdc/rdp on 16.04 doesn't work?
Can you also provide the krdc version on 16.04?
Thanks.
Comment 6 Tom Chiverton 2016-08-23 18:50:15 UTC
16.04 uses KRDC Version 4.14.16 with KDE Development Platform 4.14.16
Comment 7 Tom Chiverton 2016-08-23 18:51:03 UTC
And, yes, no audio with the command line KRDC uses (as seen in ps). Making the change suggested and invoking by hand sounds works fine.
Comment 8 Justin Zobel 2022-10-24 00:46:39 UTC
Thank you for reporting this bug in KDE software. As it has been a while since this issue was reported, can we please ask you to see if you can reproduce the issue with a recent software version?

If you can reproduce the issue, please change the status to "REPORTED" when replying. Thank you!
Comment 9 Bug Janitor Service 2022-11-08 05:10:00 UTC
Dear Bug Submitter,

This bug has been in NEEDSINFO status with no change for at least
15 days. Please provide the requested information as soon as
possible and set the bug status as REPORTED. Due to regular bug
tracker maintenance, if the bug is still in NEEDSINFO status with
no change in 30 days the bug will be closed as RESOLVED > WORKSFORME
due to lack of needed information.

For more information about our bug triaging procedures please read the
wiki located here:
https://community.kde.org/Guidelines_and_HOWTOs/Bug_triaging

If you have already provided the requested information, please
mark the bug as REPORTED so that the KDE team knows that the bug is
ready to be confirmed.

Thank you for helping us make KDE software even better for everyone!
Comment 10 Geert Janssens 2022-11-08 12:23:46 UTC
For me this is fixed. I'm currently running Fedora 36, which ships freerdp-2.8.0-1.fc36.x86_64.

For my part this can be closed, though I don't know if that's something I should do now or leave for the maintainers. So I have set the status back to reported to be on the safe side.