RDP: fix no audio issue

Add a new option for audio system.
We need to specify the audio system explicitly to make it work.
User can choose which audio system(alsa or pulseaudio) he prefered
if he want to play the audio on local machine.

BUG: 354920

Signed-off-by: AceLan Kao <acelan@acelan.idv.tw>